# godot-detour

./: .gitignore  CMakeLists.txt  SConstruct
demo/: Camera.gd  default_env.tres  icon.png.import  main.gd  main.tscn  project.godot
demo/addons/godot-detour/: godot-detour.gdextension
demo/fonts/: HighlandGothicFLF-Bold.ttf.import  HighlandGothicFLF.ttf.import  HighlandGothicLightFLF.ttf.import  action_font.tres  default_font.tres  default_font_bold.tres
demo/sounds/: success.wav.import
src/: detourcrowdagent.cpp  detourcrowdagent.h  detournavigation.cpp  detournavigation.h  detournavigationmesh.cpp  detournavigationmesh.h  detourobstacle.cpp  detourobstacle.h  godotdetour.cpp  godotdetour.h
src/util/: chunkytrimesh.cpp  detourinputgeometry.cpp  detourinputgeometry.h  godotdetourdebugdraw.cpp  godotdetourdebugdraw.h  godotgeometryparser.cpp  godotgeometryparser.h  meshdataaccumulator.cpp  meshdataaccumulator.h  navigationmeshhelpers.h  recastcontext.cpp  recastcontext.h
